--- a/DotNetApiWithJWT.Api/appsettings.json
+++ b/DotNetApiWithJWT.Api/appsettings.json
@@ -5,5 +5,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "JWT": {
+    "Key": "FvWeZqHrTCeAEBCUXiwKDB+BPbU2I0rMKpNTlrtPzPA=",
+    "Issuer": "SecureApi",
+    "Audience": "SecureApiUser",
+    "DurationInDays": 30
+  }
 }
