add connectionString and add  config identity.

--- a/DotNetApiWithJWT.Api/appsettings.json
+++ b/DotNetApiWithJWT.Api/appsettings.json
@@ -11,5 +11,8 @@
     "Issuer": "SecureApi",
     "Audience": "SecureApiUser",
     "DurationInDays": 30
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "server=,;database=DotNetApiWithJWT;Trusted_Connection=true"
   }
 }
