Seeding Roles User,Admin.

--- a/DotNetApiWithJWT.Api/appsettings.json
+++ b/DotNetApiWithJWT.Api/appsettings.json
@@ -13,6 +13,6 @@
     "DurationInDays": 30
   },
   "ConnectionStrings": {
-    "DefaultConnection": "server=,;database=DotNetApiWithJWT;Trusted_Connection=true"
+    "DefaultConnection": "server=.;database=DotNetApiWithJWT;Trusted_Connection=true"
   }
 }
